[package]
name = "dwkv"
version = "0.1.0"
edition = "2021"


[lib]
name = "dwkv"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full", "io-util"] }
tokio-stream = "*"
bytes = "^1.2.1"
uuid = { version = "*", features = ["v4", "v7"] }
rand = { version = "0.8" }
serde = { version = "*", features = ["derive"] }
bincode = "*"
memmap2 = "*"
tracing = "*"
tracing-subscriber = "*"
pin-project-lite = "*"

[dev-dependencies]
tempdir = { version = "*" }
