[package]
name = "dwkv"
version = "0.1.0"
edition = "2021"


[lib]
name = "dwkv"
path = "src/lib.rs"

[[bin]]
name = "dwkv-cli"
path = "src/bin/cli.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full", "io-util"] }
tokio-stream = "*"
bytes = "^1.2.1"
uuid = { version = "*", features = ["v4", "v7"] }
rand = { version = "0.8" }
serde = { version = "*", features = ["derive"] }
bincode = "*"
memmap2 = "*"
tracing = "*"
tracing-subscriber = "*"
pin-project-lite = "*"
md-5 = "^0.10.0"

[dev-dependencies]
tempdir = { version = "*" }
