[package]
name = "dwkv"
version = "0.1.0"
edition = "2021"


[lib]
name = "dwkv"
path = "src/lib.rs"

# [[bin]]
# name = "dwkv-cli"
# path = "src/bin/cli.rs"

[[bin]]
name = "dump_write_log"
path = "src/bin/dump_write_log.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = [
  "fs",
  "io-std",
  "io-util",
  "macros",
  "rt",
  "rt-multi-thread",
  "time",
  "sync",
  "parking_lot",
] }
tokio-stream = "*"
bytes = "^1.2.1"
rand = { version = "0.8" }
serde = { version = "*", features = ["derive"] }
bincode = "*"
memmap2 = "*"
tracing = "*"
pin-project-lite = "*"
md-5 = "^0.10.0"
xorf = { version = "*", features = ["serde"] }
murmur3 = "*"
murmur2 = "*"
tracing-subscriber = "*"

[dev-dependencies]
tempdir = { version = "*" }
